force-app/main/default/objects/HSP_S__c/HSP_S__c.object-meta.xml
<CustomObject>
    <description>Home Service Plan South Region</description>
    <label>Home Service Plan South</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>HSP-S Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Service Plans South</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>