force-app/main/default/objects/HSP_S__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date of plan activation</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>