force-app/main/default/objects/HSP_S__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate this plan</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>