force-app/main/default/objects/HSP_S__c/fields/Confirmation_Name__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Name__c</fullName>
    <description>Confirmation name of product</description>
    <label>Confirmation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>