force-app/main/default/objects/HSP_S__c/fields/downsell__c.field-meta.xml
<CustomField>
    <fullName>downsell__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A downsell is displayed after the user is provided a bundle and does NOT select the bundle.</description>
    <inlineHelpText>Downsell is followed by skipping a bundle</inlineHelpText>
    <label>Downsell</label>
    <type>Checkbox</type>
</CustomField>