force-app/main/default/objects/HSP_S__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <description>Plan Headline</description>
    <label>Headline</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>