force-app/main/default/objects/HSP_S__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Plan icon</description>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>