force-app/main/default/objects/HSP_S__c/fields/leading__c.field-meta.xml
<CustomField>
    <fullName>leading__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an upsell is represented a leading must first be chosen. The user first sees the leading plan and if they select the leading plan they are then seen taken to an upsell plan.</description>
    <inlineHelpText>This will be the first plan to display to the user before an upsell.</inlineHelpText>
    <label>leading</label>
    <type>Checkbox</type>
</CustomField>