force-app/main/default/objects/HSP_S__c/fields/Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Plan_Id__c</fullName>
    <label>Plan Id</label>
    <type>AutoNumber</type>
</CustomField>