force-app/main/default/objects/HSP_S__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <description>List price</description>
    <label>Price List</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>