force-app/main/default/objects/HSP_S__c/fields/Price_Net__c.field-meta.xml
<CustomField>
    <fullName>Price_Net__c</fullName>
    <description>The listed price for the plan</description>
    <inlineHelpText>Base Price</inlineHelpText>
    <label>Price Net</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>