force-app/main/default/objects/HSP_S__c/fields/Product_Body__c.field-meta.xml
<CustomField>
    <fullName>Product_Body__c</fullName>
    <description>Plan description</description>
    <label>Product Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>