force-app/main/default/objects/HSP_S__c/fields/Product_Details_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Details_Link__c</fullName>
    <description>Link to more information about the product</description>
    <label>Product Details Link</label>
    <type>Url</type>
</CustomField>