force-app/main/default/objects/HSP_S__c/fields/Product_Logo__c.field-meta.xml
<CustomField>
    <fullName>Product_Logo__c</fullName>
    <description>URL to the provider logo</description>
    <label>Product Logo</label>
    <type>Url</type>
</CustomField>