force-app/main/default/objects/HSP_S__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product Name</description>
    <label>Product Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>