force-app/main/default/objects/HSP_S__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider is for example HomeServ</description>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>