force-app/main/default/objects/HSP_S__c/fields/sort_order__c.field-meta.xml
<CustomField>
    <fullName>sort_order__c</fullName>
    <label>sort_order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>