force-app/main/default/objects/HSP_S__c/fields/Terms_URL__c.field-meta.xml
<CustomField>
    <fullName>Terms_URL__c</fullName>
    <description>Link to terms</description>
    <label>Terms URL</label>
    <type>Url</type>
</CustomField>