force-app/main/default/objects/HSP_S__c/recordTypes/list.recordType-meta.xml
<RecordType>
    <fullName>list</fullName>
    <active>true</active>
    <label>list</label>
</RecordType>