force-app/main/default/objects/HSP_S__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price_Net__c</columns>
    <columns>Terms_URL__c</columns>
    <columns>Activation_Date__c</columns>
    <columns>Price_List__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Confirmation_Name__c</columns>
    <columns>Provider__c</columns>
    <columns>Active__c</columns>
    <columns>sort_order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>